# create_billing

./: README.md  pyproject.toml
create_billing/: flaskPlan copy.py  flaskPlan.py  workBitrix.py  workFlask.py
create_billing/static/: style.css
create_billing/templates/: _sales_plans.html  form.html  index.html
